[tool.poetry]
name = "planning"
version = "0.1.0"
description = ""
authors = ["Clement <clement62ing@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.110.0"
python-multipart = "0.0.9"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
mariadb = "1.1.10"
cryptography = "42.0.5"
pycryptodome = "3.20.0"
[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
